--- a/client/.gitignore
+++ b/client/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+//test version
+/src/components/SetProfileV2.jsx
+/src/pages/RegisterV2.js
+/src/pages/ChatV2.js
