--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
+    "emoji-picker-react": "^4.4.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.6.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
