--- a/client/.gitignore
+++ b/client/.gitignore
@@ -22,8 +22,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/public/uploads
 
 //test version
 /src/components/SetProfileV2.jsx
 /src/pages/RegisterV2.js
+/src/pages/ChatV3.js
 /src/pages/ChatV2.js
+
